--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
           </div>
           <div class="modal-body" style="height:80vh;">
-            <iframe src="ruta/a/tu/archivo.pdf" width="100%" height="100%" style="border:none;"></iframe>
+            <iframe src="assets/pdf/cv.pdf" width="100%" height="100%" style="border:none;"></iframe>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cerrar</button>
