--- a/index.html
+++ b/index.html
@@ -117,31 +117,38 @@
     </div>
     <!-- === FIN: Botón Video + Modal Video === -->
 
-    <!-- === INICIO: Botón PDF + Modal PDF === -->
-    <div class="container text-center mt-2 mb-4">
-      <button type="button" class="btn btn-secondary btn-lg" data-bs-toggle="modal" data-bs-target="#pdfModal">
-        Ver PDF
-      </button>
-    </div>
+<!-- === INICIO: Botón PDF + Modal PDF === -->
+<div class="container text-center mt-2 mb-4">
+  <button type="button" class="btn btn-secondary btn-lg" data-bs-toggle="modal" data-bs-target="#pdfModal">
+    Ver PDF
+  </button>
+</div>
 
-    <div class="modal fade" id="pdfModal" tabindex="-1" aria-labelledby="pdfModalLabel" aria-hidden="true">
-      <div class="modal-dialog modal-xl modal-dialog-centered">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="pdfModalLabel">Visualizador de PDF</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
-          </div>
-          <div class="modal-body" style="height:80vh;">
-            <iframe src="assets/pdf/cv.pdf" width="100%" height="100%" style="border:none;"></iframe>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cerrar</button>
-          </div>
-        </div>
+<div class="modal fade" id="pdfModal" tabindex="-1" aria-labelledby="pdfModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-xl modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="pdfModalLabel">Visualizador de PDF</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+      </div>
+      <div class="modal-body" style="height: 80vh;">
+        <object data="assets/pdf/cv.pdf#toolbar=0&view=FitH" 
+                type="application/pdf" 
+                width="100%" 
+                height="100%"
+                style="border: none;">
+          <p>Tu navegador no soporta visualización de PDF. 
+             <a href="assets/pdf/cv.pdf" download>Descargar PDF</a>
+          </p>
+        </object>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cerrar</button>
       </div>
     </div>
-    <!-- === FIN: Botón PDF + Modal PDF === -->
-
+  </div>
+</div>
+<!-- === FIN: Botón PDF + Modal PDF === -->
     <!-- === INICIO: Contenedor Principal === -->
     <div class="container">
       <h1>Hello world contenedor en bootstrap</h1>
