--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
         <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Cerrar"></button> <!-- CAMBIO: btn-close-white -->
       </div>
       <div class="modal-body">
-        <p><strong>Nombre:</strong> John Doe</p>
-        <p><strong>Profesión:</strong> Arquitecto y Ingeniero</p>
-        <p><strong>Biografía:</strong> John tiene más de 10 años de experiencia diseñando edificios sustentables y liderando proyectos internacionales.</p>
-        <p><strong>Email:</strong> john.doe@example.com</p>
+        <p><strong>Nombre:</strong> Estivenson Carrasquilla</p>
+        <p><strong>Profesión:</strong> Estudiante de Ingeniería de Sistemas</p>
+        <p><strong>Biografía:</strong>Sin palabras</p>
+        <p><strong>Email:</strong> estiven@unicesar.edu.co</p>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
